<resources>
    <string name="app_name">The Ledger</string>

    //FontPath
    <string name="regular_font">font/Roboto-Regular.ttf</string>
    <string name="bold_font">font/Roboto-Bold.ttf</string>
    <string name="medium_font">font/Roboto-Medium.ttf</string>
    <string name="italic_font">font/Roboto-Italic.ttf</string>
    <string name="light_font">font/Roboto-Light.ttf</string>




    //String that would need Translation bellow

    //Menus
    <string name="send_feedback">Send Feedback</string>
    <string name="about">About</string>
    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <string name="help">Help</string>
    <string name="settings">Settings</string>
    <string name="view">View</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>


    //Launch
    <string name="launch_welcome_message">Welcome</string>

    //Login
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="remember_me">Remember Username</string>
    <string name="create_account">Create Account</string>
    <string name="forgot_username_password"><u>Forgot Username/Password</u></string>
    <string name="sign_in">Sign In</string>

    //General Text
    <string name="long_press">Long press for a peak</string>

    //Account
    <string name="accounts_action_bar_title">Accounts</string>
    <string name="account_details_action_bar_title">Account Details</string>
    <string name="no_decription">No Description</string>
    <string name="account_updated">Account Updated</string>

    //Bills
    <string name="bills_action_bar_title">Bills</string>
    <string name="bills_details_action_bar_title">Bill Details</string>
    <string name="bill_create">Create Bill</string>
    <string name="bill_update">Update Bill</string>
    <string name="bill_title">Bill Title</string>
    <string name="bill_type">Bill Type</string>
    <string name="bill_due_date">Bill Due Date</string>
    <string name="bill_reminder_set">Reminder Set</string>
    <string name="bill_comments">Comments</string>
    <string name="no_comments">No Comments</string>
    <string name="bill_updated">Bill Updated</string>
    <string name="bill_no_reminder_set">No reminder set</string>
    <string name="bill_due_on">Bill due on:</string>
    <string name="bill_click_to_due_date">Tap to set due date</string>

    //CheckList
    <string name="checklist_action_bar_title">Checklist</string>
    <string name="title">Title</string>
    <string name="create">Create</string>
    <string name="todo">Todo</string>
    <string name="completed">Completed</string>

    //Settings
    <string name="set_passcode">Set Passcode</string>
    <string name="change_password">Change Password</string>

    //Help
    <string name="tutorial">Tutorial</string>
    <string name="anonymous">Anonymous</string>
    <string name="thank_you_for_feedback">Thank you for your feedback!</string>



    //About
    <string name="donate">Donate</string>
    <string name="libraries_used">Libraries Used</string>
    <string name="donate_action_bar_title">Donate</string>

    //Dashboard
    <string name="dashboard_action_bar_title">Dashboard</string>

    //Create Account/View Account
    <string name="view_profile_action_bar_title">User Profile</string>
    <string name="create_account_action_bar_title">Create Account</string>
    <string name="edit_account_action_bar_title">Edit Account</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="show_password">Show Password</string>
    <string name="phone_number">Phone Number (Optional)</string>
    <string name="email">Email (Optional)</string>
    <string name="social">Social</string>
    <string name="financial">Financial</string>
    <string name="entertainment">Entertainment</string>
    <string name="dismiss">Dismiss</string>

    //Edit Account
    <string name="other">Other</string>
    <string name="save_changes">Save Changes</string>
    <string name="account_title">Account Title</string>
    <string name="account_username">Account Username</string>
    <string name="account_password">Account Password</string>
    <string name="account_type">Account Type</string>
    <string name="account_description">Account Description</string>

    //Errors
    <string name="error">Error</string>
    <string name="invalid_username_password">Invalid username or password.</string>
    <string name="listener_not_implemented">Activity needs to implement listener</string>
    <string name="feature_not_available">This feature is not available</string>
    <string name="account_management_error">Need select create account or edit account</string>
    <string name="cannot_reach_server">Cannot Reach Server</string>
    <string name="no_bundle_attached">No Bundle Attached</string>
    <string name="code">Code</string>
    <string name="status">Status</string>
    <string name="message">Message</string>
    <string name="no_message">No Message</string>
    <string name="no_data">No Data</string>
    <string name="no_network_text">The network seems to be unavailable. Please check your settings and try again.</string>
    <string name="server_error">Oops, something went wrong! :(</string>
    <string name="tap_to_retry">Tap to retry</string>

    //Dialog
    <string name="please_wait">Please Wait!</string>
    <string name="processing">Processing\&#8230;</string>
    <string name="dialog_ok">OK</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="dialog_error">Error</string>
    <string name="sign_out">Sign Out</string>
    <string name="sign_out_message">Are you sure you want to sign out?</string>

    //Accessibility
    <string name="image_no_wifi">Wifi image</string>
    <string name="feature_icon">Feature Icon</string>
    <string name="server_error_image">Server Error image</string>
    <string name="no_data_image">No Data Image</string>
    <string name="create_new_icon">Create New Icon</string>
    <string name="refresh_icon">Refresh Icon</string>
    <string name="overflow_menu">Overflow Menu</string>
    <string name="your_name">Your Name</string>

    //Copyright
    <string name="reference_disclaimer">The following software was used in the production of this product. The above software contains the following licence and notice below:</string>
    <string name="reference_thank_you">The following libraries are third party software that were used to produce the Ledger. We thank the open source community for their contribution.</string>
</resources>
