<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:id="@+id/fragment_root">

    <TextView
        android:id="@+id/launch_welcome_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:gravity="center"
        android:text="@string/launch_welcome_message"
        fontPath="@string/regular_font"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="@dimen/text_display_1" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/launch_welcome_text"
        android:gravity="center"
        android:padding="@dimen/five_padding"
        android:text="@string/app_name"
        fontPath="@string/medium_font"
        android:textColor="@color/colorPrimary"
        android:textSize="@dimen/text_display_2" />


</RelativeLayout>