<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/fragment_root"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/about_header"
        android:orientation="vertical"
        android:layout_marginStart="@dimen/twenty_five_padding"
        android:layout_marginEnd="@dimen/twenty_five_padding">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/libraries_used"
            fontPath="@string/medium_font"
            android:textSize="@dimen/text_display_big_forty_five" />
        <TextView
            android:paddingTop="@dimen/ten_padding"
            android:paddingBottom="@dimen/ten_padding"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            fontPath="@string/regular_font"
            android:text="@string/reference_thank_you"
            android:textSize="@dimen/text_subheading_sixteen" />
    </LinearLayout>


    <android.support.v7.widget.RecyclerView
        android:layout_below="@id/about_header"
        android:id="@+id/about_list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/ten_padding"
        android:paddingTop="@dimen/twenty_five_padding"
        android:scrollbars="vertical"
        android:scrollbarSize="@dimen/one_padding"
        android:fadeScrollbars="false"/>

</RelativeLayout>