<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:id="@+id/fragment_root">


    <FrameLayout
        android:layout_width="match_parent"
        android:id="@+id/secondary_root"
        android:layout_height="match_parent"
        android:visibility="gone">

        <include
            android:id="@+id/no_network_screen"
            layout="@layout/view_no_network" />

        <include
            android:id="@+id/no_data_server_error_screen"
            layout="@layout/view_no_data_server_error" />

    </FrameLayout>

    <LinearLayout
        android:id="@+id/root"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/ten_padding"
            android:textColor="@color/text_caption"
            android:textSize="@dimen/text_caption"
            android:text="@string/bill_title"
            fontPath="@string/regular_font"/>

        <TextView
            android:id="@+id/bill_title_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_body"
            android:paddingStart="@dimen/ten_padding"
            android:textColor="@color/text_color"
            fontPath="@string/regular_font"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/ten_padding"
            android:textColor="@color/text_caption"
            android:textSize="@dimen/text_caption"
            android:text="@string/bill_type"
            fontPath="@string/regular_font"/>

        <TextView
            android:id="@+id/bill_type_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_body"
            android:paddingStart="@dimen/ten_padding"
            android:textColor="@color/text_color"
            fontPath="@string/regular_font"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/ten_padding"
            android:textColor="@color/text_caption"
            android:textSize="@dimen/text_caption"
            android:text="@string/bill_due_date"
            fontPath="@string/regular_font"/>

        <TextView
            android:id="@+id/bill_due_date_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_body"
            android:paddingStart="@dimen/ten_padding"
            android:textColor="@color/text_color"
            fontPath="@string/regular_font"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/ten_padding"
            android:textColor="@color/text_caption"
            android:textSize="@dimen/text_caption"
            android:text="@string/bill_reminder_set"
            fontPath="@string/regular_font"/>

        <TextView
            android:id="@+id/bill_reminder_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_body"
            android:paddingStart="@dimen/ten_padding"
            android:textColor="@color/text_color"
            fontPath="@string/regular_font"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/ten_padding"
            android:textColor="@color/text_caption"
            android:textSize="@dimen/text_caption"
            android:text="@string/bill_comments"
            fontPath="@string/regular_font"/>

        <TextView
            android:id="@+id/bill_comments_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_body"
            android:paddingStart="@dimen/ten_padding"
            android:textColor="@color/text_color"
            fontPath="@string/regular_font"/>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal">

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/view_details_edit_button"
            fontPath="@string/medium_font"
            android:layout_width="match_parent"
            android:layout_height="@dimen/fifty_padding"
            android:layout_weight="1"
            android:background="@drawable/button_selector"
            android:gravity="center"
            android:text="@string/edit"
            android:textColor="@color/white"
            android:textSize="@dimen/text_body" />

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/view_details_delete_button"
            fontPath="@string/medium_font"
            android:layout_width="match_parent"
            android:layout_height="@dimen/fifty_padding"
            android:layout_weight="1"
            android:background="@drawable/button_selector"
            android:gravity="center"
            android:text="@string/delete"
            android:textColor="@color/white"
            android:textSize="@dimen/text_body" />

    </LinearLayout>

</RelativeLayout>