<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal" android:layout_width="match_parent"
    android:layout_height="@dimen/button_height">

    <TextView
        android:clickable="true"
        android:background="@drawable/tab_list_selector"
        android:id="@+id/checklist_tab_todo"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/todo"
        android:textAllCaps="true"
        android:layout_weight="1"
        android:gravity="center"
        android:layout_gravity="center"
        android:textSize="@dimen/text_body"
        android:textColor="@color/white"
        fontPath="@string/regular_font"/>

    <TextView
        android:clickable="true"
        android:background="@drawable/tab_list_selector"
        android:id="@+id/checklist_tab_completed"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/completed"
        android:textAllCaps="true"
        android:layout_weight="1"
        android:gravity="center"
        android:layout_gravity="center"
        android:textSize="@dimen/text_body"
        android:textColor="@color/white"
        fontPath="@string/regular_font"/>


</LinearLayout>